# CitaNoGo

./: .clang-format  .gitignore  CMakeLists.txt  board.cc  board.h  botzone.py  main.cc  mcts.cc  mcts.h  rand.cc  rand.h
utils/: botzone.py
